--- a/index.html
+++ b/index.html
@@ -1,78 +1,488 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>8 Block Puzzle Solver | KIFNI</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="puzzle_old.js"></script>
-</head>
-<body>
-<button class="btn">HELLO</button>
+<html lang="en">
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Solving  8 Block Puzzle">
+        <meta name="author" content="Kifni Taufik Darmawan">
+        <title>Solving 8 Block Puzzle With A*</title>
+        <!-- CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
+        <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+        <link href="css/jumbotron-narrow.css" rel="stylesheet">
+        <!-- JS -->
+        <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
+        <script type="text/javascript" src="puzzle.js"></script>
 
-<script type="text/javascript">
-	var initial_state = null;
-	var goal_state = null;
-	var problem_space = null;
-	$(function(){
-		//console.log('welcome..');
-		//goal_state = [1,2,3,4,5,6,7,8,null];
-		goal_state = [0,1,2,3,4,5,6,7,8];
-		//console.log('#goal_state = ');
-		//console.log(goal_state);
-		initial_state = [7,6,2,5,3,1,0,4,8];
-		//console.log('#initial_state = ');
-		//console.log(initial_state);
+        <style type="text/css">
+        	.tabel-puzzle{
+        		border: 1px solid #ddd;
+        		margin: auto;
+        	}
 
-		solve_ucs(initial_state, goal_state);
-		//solve_ucs(initial_state, goal_state);
+        	.tabel-puzzle td {
+        		border: 1px solid #ddd;
+        		width: 70px;
+        		height: 70px;
+        	}
 
-		//coba swap
-		// var sample_1 = [null,1,2,3,4,5,6,7,8];
-		// var sample_2 = sample_1.slice();
-		// console.log(sample_1);
-		// console.log(sample_2);
+        	.input-puzzle{
+        		width: 55px;
+        		margin: auto;
+        		font-size: 80%
+        	}
+        	.tabel-puzzle td:hover{
+        		background-color: #fcf8e3;
+        	}
+			.loader {
+			    position: fixed;
+			    left: 0px;
+			    top: 0px;
+			    width: 100%;
+			    height: 100%;
+			    z-index: 9999;
+			    opacity: 0.9;
+			    background: url('images/processing.gif') 50% 50% no-repeat rgb(249,249,249);
+			}
+			.container-puzlle-result{
+				width: 200px;
+				display: inline-block;
+				float: left;
+			}
+        	.tabel-puzzle-result{
+        		border: 1px solid #ddd;
+        		margin: auto;
+        	}
 
-		// console.log('==========');
-		// sample_2[0]=10;
-		// console.log(sample_1);
-		// console.log(sample_2);
+        	.tabel-puzzle-result td {
+        		border: 1px solid #ddd;
+        		width: 50px;
+        		height: 50px;
+        	}
+        	.tabel-puzzle-result td:hover{
+        		background-color: #fcf8e3;
+        	}
+        </style>
+    </head>
+    <body>
+    	<div class="loader"></div>
+        <div class="container">
+            <div class="header clearfix">
+	            <nav>
+	            <ul class="nav nav-pills pull-right">
+	            <li role="presentation" class="active"><a href="index.html">Home</a></li>
+	            <li role="presentation"><a href="about.html">About</a></li>
+	            <li role="presentation"><a href="http://kifni.com">Contact</a></li>
+	            </ul>
+	            </nav>
+	            <h3 class="text-muted">Block Puzzle Solver</h3>
+            </div>
+            <div class="row marketing">
+                <div class="col-md-6" style="text-align:center">
+                    <h4>Initial State</h4>
+                   	<table class="tabel-puzzle">
+                   		<tr>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   		</tr>
+                   		<tr>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   		</tr>
+                   		<tr>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="initial" class="form-control input-puzzle input-initial">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   		</tr>
+                   	</table>
+                </div>
 
-		// console.log('sample_state');
-		// console.log(sample_state);
-		// console.log(swap_right(sample_state));
-		// console.log(swap_left(sample_state));
-		// console.log(swap_up(sample_state));
-		// console.log(swap_down(sample_state));
+                <div class="col-md-6" style="text-align:center">
+                    <h4>Goal State</h4>
+                   	<table class="tabel-puzzle">
+                   		<tr>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   		</tr>
+                   		<tr>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   		</tr>
+                   		<tr>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   			<td>
+								<select name="goal" class="form-control input-puzzle input-goal">
+									<option>0</option>
+									<option>1</option>
+									<option>2</option>
+									<option>3</option>
+									<option>4</option>
+									<option>5</option>
+									<option>6</option>
+									<option>7</option>
+									<option>8</option>
+								</select>
+                   			</td>
+                   		</tr>
+                   	</table>
+                </div>
+            </div>
+            <div class="row" style="text-align:center">
+            	<button class="btn btn-lg btn-success" onclick="solveAction()"><span class="glyphicon glyphicon-search"></span> Solve This Puzzle</button>
+            </div>
+            <div class="row" style="text-align:center;border:1px dashed #ddd;margin:10px">
+            	<h3>Solutions</h3>
+            	<div id="container-solution">
 
-		// var queue = new PriorityQueue();
-		// queue.push(0, 0);
-		// queue.push(3, 3);
-		// queue.push(4, 2);
-		// console.log(queue);
-		// //console.log(queue.heap.toString()); // => 0,1,1,3,2,9,5 
-		// queue.push(6, 0);
-		// console.log(queue.pop()); // => {p:'zero'}
-		// //console.log(queue.pop()); // => {p:'1st one'}
-		// console.log(queue); // => 1,2,9,3,5
+            	</div>
+            </div>
+            <footer class="footer" style="margin-top:10px;">
+                <p>2015 <a href="http://kifni.com">Kifni Taufik Darmawan</a></p>
+            </footer>
+        </div> <!-- /container -->
+		<script type="text/javascript">
+			var initial_state = null;
+			var goal_state = null;
 
-		//queue.push({p:'one-half'}, 0.5);
-		//console.log(queue.heap.toString()); // => 0.5,2,1,3,5,9
+			$(function(){
+				//goal_state = [1,2,3,4,5,6,7,8,0];
+				goal_state 		= [0,1,2,3,4,5,6,7,8];
+				initial_state 	= [3,1,2,6,0,5,7,4,8];
+				//initial_state = [0,2,3,4,6,5,1,7,8];
+				//initial_state = [0,1,3,8,2,5,7,6,4];
+				//initial_state = [7,6,2,5,3,1,0,4,8];
 
 
+				//get all goal input
+				$.each($('.input-goal'),function(idx,item){
+					//set default goal state
+					$(item).val(idx);
+				});
+				$.each($('.input-initial'),function(idx,item){
+					//set default goal state
+					$(item).val(initial_state[idx]);
+				});
 
-	// var queue = new PriorityQueue(function(a, b) {
-	//   return b.priority - a.priority;
-	// });
+				//console.log(solveBFS(initial_state, goal_state));
+				//console.log(solveAStar(initial_state, goal_state));
+				$(".loader").fadeOut("fast");
+			});
+			function solveAction()
+			{	
+				$.doit = function(){
+					var df = $.Deferred();
+					$(".loader").fadeIn("fast");
+					setTimeout(df.resolve,200);
+					return df;					
+				}
 
-	// queue.enq({ priority: 250, data: 0 });
-	// queue.enq({ priority: 300, data: 1 });
-	// queue.enq({ priority: 150, data: 0 });
-	// console.log(queue.size()); // 3
-	// console.log(queue.deq()); // { cash: 300, name: 'Jano' }
-	// console.log(queue.size()); // 2
+				$.doit().done(function(){
+					$.solving = function(){
+						var dfs = $.Deferred();
+						var initial_state = [];
+						$.each($('.input-initial'),function(idx,item){
+							initial_state.push(parseInt($(item).val()));
+						});
 
-	});
-</script>
-</body>
+						var goal_state = [];
+						$.each($('.input-goal'),function(idx,item){
+							goal_state.push(parseInt($(item).val()));
+						});
+
+						result = solveAStar(initial_state, goal_state);
+						if(result){
+							dfs.resolve();
+						}
+						return dfs;
+					}
+					$.solving().done(function(){
+						states = [];
+						states.push(initial_state);
+						for (var i = 0; i < result.solution.length; i++) {
+							//console.log(result.solution[i]);
+							n_state = moveState(states[states.length-1],result.solution[i]);
+							//console.log(n_state);
+							states.push(n_state);
+							
+						};
+						var actions = result.solution.slice();
+						actions.unshift('start');
+						//console.log(actions);
+						//console.log(states);
+						var html = "";
+						for (var i = 0; i < states.length; i++) {
+							html +="<div class='container-puzlle-result'><h4>"+actions[i] +" (" +i +")" +"</h4>";
+							html +=getPuzzleView(states[i]);
+							html +='</div>';
+							console.log(actions[i]);
+							console.log(states[i]);
+							getPuzzleView(states[i]);
+						};
+						console.log(html);
+						$('#container-solution').html(html);
+						$(".loader").fadeOut("fast");
+
+					});
+				});
+			}
+
+			function getPuzzleView(state)
+			{
+				var table="<table class='tabel-puzzle-result'>";
+				table+="<tr><td>"+(state[0] ? state[0] : '' )+"</td>"+"<td>"+(state[1] ? state[1] : '')+"</td>"+"<td>"+(state[2] ? state[2] : '')+"</td></tr>";
+				table+="<tr><td>"+(state[3] ? state[3] : '' )+"</td>"+"<td>"+(state[4] ? state[4] : '')+"</td>"+"<td>"+(state[5] ? state[5] : '')+"</td></tr>";
+				table+="<tr><td>"+(state[6] ? state[6] : '' )+"</td>"+"<td>"+(state[7] ? state[7] : '')+"</td>"+"<td>"+(state[8] ? state[8] : '')+"</td></tr>";
+				table +="</table>"
+
+				return table;
+			}
+
+			function moveState(state, dir)
+			{
+				var zero_idx = state.indexOf(0);
+				//console.log('initial= ['+state+']');
+				//console.log('zero_idx='+zero_idx);
+				n_state = state.slice();
+				mod = zero_idx % 3;
+				div = parseInt(zero_idx/3);
+				//console.log('#mod='+mod+'#div='+div);
+				if(dir == 'left' && mod != 0){
+					new_zero = zero_idx - 1;
+				}
+				else if(dir == 'right' && mod !=2){
+					new_zero = zero_idx + 1;
+				}
+				else if(dir == 'up' && div !=0){
+					new_zero = zero_idx - 3;
+				}
+				else if(dir == 'down' && div !=2){
+					new_zero = zero_idx + 3;
+				}else{
+					return null;
+				}
+				n_state = swap(n_state, zero_idx,new_zero );
+				return n_state;
+
+			}
+
+			function sample()
+			{
+				console.log('sample sample');
+
+			}
+
+		</script>
+
+    </body>
 </html>
