add : about.html

--- a/about.html
+++ b/about.html
@@ -79,9 +79,14 @@
 	            </nav>
 	            <h3 class="text-muted">Block Puzzle Solver</h3>
             </div>
-            <div class="row" style="text-align:center">
-            Hello there...
-            </div>
+
+			<div class="jumbotron">
+				<!-- <h1>Solving Block Puzzle With AI</h1> -->
+				<p class="lead">
+					
+				</p>
+				<p><a class="btn btn-lg btn-success" href="index.html" role="button">Try Solving Block Puzzle Now</a></p>
+			</div>
 
             <footer class="footer" style="margin-top:10px;">
                 <p>2015 <a href="http://kifni.com">Kifni Taufik Darmawan</a></p>
