--- a/about.html
+++ b/about.html
@@ -24,14 +24,14 @@
 
         	.tabel-puzzle td {
         		border: 1px solid #ddd;
-        		width: 70px;
+        		width: 75px;
         		height: 70px;
         	}
 
         	.input-puzzle{
-        		width: 55px;
+        		width: 60px;
         		margin: auto;
-        		font-size: 80%
+        		font-size: 10px;
         	}
         	.tabel-puzzle td:hover{
         		background-color: #fcf8e3;
